--- a/homepage.ejs
+++ b/homepage.ejs
@@ -4,8 +4,19 @@
     <title>Home Page</title>
 </head>
 <body>
+    <nav>
+        <h1 align="center">Keyshawn's Portfolio</h1>
+      <div class="navibar-links">
+      <ul><!--links all the html files so that you can access it by just clicking the button-->
+      </ul>
+    </div>
+    <img src="https://th.bing.com/th/id/OIP.LZqmKWCMu7J5vpjsPcTaugHaFO?pid=ImgDet&rs=1" alt="Kagu" style="width: 80px; height: 60px;"><!--uses the image's address to insert it into the website-->
+  </nav>
+  </div>
+  <div class="backgr"><!--creates a class called website for editing purposes in css-->
+  </div>
     <%- include ('partials/header') %>
-    <h1>Keyshawn's Portfolio</h1>
+    <h1 align="center">Keyshawn's Portfolio</h1>
     <%- include('partials/footer') %>
 </body>
 
