--- a/footer.ejs
+++ b/footer.ejs
@@ -1,3 +1,5 @@
 <footer>
-    <p>&copy; November, 2023, Keyshawn Forde</p>
+November, 2023, Keyshawn Forde
+<a href="https://github.com/Keyshawnforde">GitHub</a> |
+<a href="https://linkedin.com/in/Keyshawn Forde">LinkedIn</a>
 </footer>
