--- a/header.ejs
+++ b/header.ejs
@@ -1,8 +1,3 @@
 <header>
-    <nav>
-        <ul>
-            <a href="/">Home</a>
-            <a href="/Projects">Projects</a>
-        </ul>
-    </nav>
+   Hello
 </header>
