--- a/footer.ejs
+++ b/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-November, 2023, Keyshawn Forde
-<a href="https://github.com/Keyshawnforde">GitHub</a> |
-<a href="https://linkedin.com/in/Keyshawn Forde">LinkedIn</a>
+<nav class="navbar fixed-bottom navibar-dark bg-dark">
+    <h4 class="navbar-text"&copy; Copyright in 2023. Keyshawn Forde
+</nav>
 </footer>
