--- a/header.ejs
+++ b/header.ejs
@@ -1,3 +1,6 @@
-<header>
-   Hello
-</header>
+!DOCTYPE <html>
+<html>
+   <head>
+      <title><%= title %></title>
+      <link rel = 'stylesheet' href='/public/app.css'>
+   </head>
